# habit_tracker

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  simple.env
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_last_done_habit_last_missed.py  0003_habitrecord.py
telegram_bot/: bot.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
telegram_bot/management/commands/: start_bot.py
telegram_bot/migrations/: 0001_initial.py  0002_alter_telegramuser_user.py  0003_alter_telegramuser_chat_id_alter_telegramuser_user_and_more.py  0004_alter_habitrecord_unique_together_and_more.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
