[tool.poetry]
name = "habit_tracker"
version = "0.1.0"
description = ""
authors = ["ANTAQ <mymillions@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = "^22.5"
redis = "^6.4.0"
celery = "^5.5.3"
django-celery-beat = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
